--- a/style.css
+++ b/style.css
@@ -15,3 +15,17 @@ p {
   text-align: center;
 }
 
+/*ID selector (#id_name)*/
+
+#main-title{
+  color: rgb(142, 20, 142)
+}
+
+/* CLASS selector (.classname)*/
+.navbar{
+  color: rgb(227, 139, 227)
+}
+
+.intro{
+  color:rgb(54, 177, 87)
+}
